continuing to remove/improve code